@@ -1,5 +1,9 @@
 2009-01-28  Scott James Remnant  <scott@netsplit.com>
 
+	* init/tests/test_job_process.c (test_run): Check that trailing
+	newlines are ignored when running a script (can verify r1025 is
+	fixed with gdb)
+
 	* init/tests/test_environ.c (test_expand): Add a test case for the
 	bug fixed in r1027, the implicit case of the gap in the environment
 	string being the same size as the value replacing it.
